--- a/index.html
+++ b/index.html
@@ -1,18 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Quiz app</h1>
-    <div class="card">
-      <div class="quiestion">QUESTION</div>
-      <button id="show-answer" class="button-hide">Show Answer</button>
-
-      <button class="tag">tag</button>
+    <header>Quiz app</header>
+    <div class="quiz">
+      <div class="card">
+        <div class="quiestion">QUESTION</div>
+        <button id="show-answer" class="button-hide">Show Answer</button>
+        <button class="tag">tag</button>
+      </div>
+      <div class="card">
+        <div class="quiestion">QUESTION</div>
+        <button id="show-answer" class="button-hide">Show Answer</button>
+        <button class="tag">tag</button>
+      </div>
+      <div class="card">
+        <div class="quiestion">QUESTION</div>
+        <button id="show-answer" class="button-hide">Show Answer</button>
+        <button class="tag">tag</button>
+      </div>
+      <div class="card">
+        <div class="quiestion">QUESTION</div>
+        <button id="show-answer" class="button-hide">Show Answer</button>
+        <button class="tag">tag</button>
+      </div>
+      <div class="card">
+        <div class="quiestion">QUESTION</div>
+        <button id="show-answer" class="button-hide">Show Answer</button>
+        <button class="tag">tag</button>
+      </div>
+      <div class="card">
+        <div class="quiestion">QUESTION</div>
+        <button id="show-answer" class="button-hide">Show Answer</button>
+        <button class="tag">tag</button>
+      </div>
+      <div class="card">
+        <div class="quiestion">QUESTION</div>
+        <button id="show-answer" class="button-hide">Show Answer</button>
+        <button class="tag">tag</button>
+      </div>
+      <div class="card">
+        <div class="quiestion">QUESTION</div>
+        <button id="show-answer" class="button-hide">Show Answer</button>
+        <button class="tag">tag</button>
+      </div>
+      <div class="card">
+        <div class="quiestion">QUESTION</div>
+        <button id="show-answer" class="button-hide">Show Answer</button>
+        <button class="tag">tag</button>
+      </div>
     </div>
-    <div class="footer"><p>footer</p></div>
+
+    <div class="navbar">
+      <ul>
+        <li><a href="about-me">Home</a></li>
+        <li><a href="about-me">Bookmark</a></li>
+        <li><a href="about-me">Profile</a></li>
+      </ul>
+    </div>
   </body>
 </html>
