--- a/index.html
+++ b/index.html
@@ -2,66 +2,92 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" type="image/png" href="resources/favicon-32x32.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <header>Quiz app</header>
-    <div class="quiz">
-      <div class="card">
-        <div class="quiestion">QUESTION</div>
-        <button id="show-answer" class="button-hide">Show Answer</button>
-        <button class="tag">tag</button>
-      </div>
-      <div class="card">
-        <div class="quiestion">QUESTION</div>
-        <button id="show-answer" class="button-hide">Show Answer</button>
-        <button class="tag">tag</button>
-      </div>
-      <div class="card">
-        <div class="quiestion">QUESTION</div>
-        <button id="show-answer" class="button-hide">Show Answer</button>
-        <button class="tag">tag</button>
-      </div>
-      <div class="card">
-        <div class="quiestion">QUESTION</div>
-        <button id="show-answer" class="button-hide">Show Answer</button>
-        <button class="tag">tag</button>
-      </div>
-      <div class="card">
-        <div class="quiestion">QUESTION</div>
-        <button id="show-answer" class="button-hide">Show Answer</button>
-        <button class="tag">tag</button>
-      </div>
-      <div class="card">
-        <div class="quiestion">QUESTION</div>
-        <button id="show-answer" class="button-hide">Show Answer</button>
-        <button class="tag">tag</button>
-      </div>
-      <div class="card">
-        <div class="quiestion">QUESTION</div>
-        <button id="show-answer" class="button-hide">Show Answer</button>
-        <button class="tag">tag</button>
-      </div>
-      <div class="card">
-        <div class="quiestion">QUESTION</div>
-        <button id="show-answer" class="button-hide">Show Answer</button>
-        <button class="tag">tag</button>
-      </div>
-      <div class="card">
-        <div class="quiestion">QUESTION</div>
-        <button id="show-answer" class="button-hide">Show Answer</button>
-        <button class="tag">tag</button>
-      </div>
-    </div>
+  <body background="Taylor-Swift-Eras-Tour.jpg">
+    <header>
+      <img src="resources/artist_logo-600x123.png" alt="Artist logo" />
+    </header>
 
-    <div class="navbar">
+    <main class="quiz">
+      <div class="card">
+        <section class="question">
+          <h5>QUESTION 1:</h5>
+          <p>What is Taylor Swift's full name?</p>
+        </section>
+        <section class="answer">
+          <button>Show Answer</button>
+          <p class="show-answer">Taylor Alison Swift</p>
+        </section>
+      </div>
+
+      <div class="card">
+        <section class="question">
+          <h5>QUESTION 2:</h5>
+          <p>
+            In which year did Taylor Swift release her debut self-titled album?
+          </p>
+        </section>
+
+        <section class="answer">
+          <button>Show Answer</button>
+          <p class="show-answer">2006</p>
+        </section>
+      </div>
+
+      <div class="card">
+        <section class="question">
+          <h5>QUESTION 3:</h5>
+          <p>
+            Which album features the hit songs "Love Story" and "You Belong with
+            Me"?
+          </p>
+        </section>
+        <section class="answer">
+          <button>Show Answer</button>
+          <p class="show-answer">Fearless</p>
+        </section>
+      </div>
+
+      <div class="card">
+        <section class="question">
+          <h5>QUESTION 4:</h5>
+          <p>
+            What is the name of Taylor Swift's documentary that was released on
+            Netflix in 2020?
+          </p>
+        </section>
+        <section class="answer">
+          <button>Show Answer</button>
+          <p class="show-answer">Miss Americana</p>
+        </section>
+      </div>
+
+      <div class="card">
+        <section class="question">
+          <h5>QUESTION 5:</h5>
+          <p>
+            Which album marked Taylor Swift's transition from country music to
+            pop music?
+          </p>
+        </section>
+
+        <section class="answer">
+          <button>Show Answer</button>
+          <p class="show-answer">1989</p>
+        </section>
+      </div>
+    </main>
+
+    <nav class="navbar">
       <ul>
-        <li><a href="about-me">Home</a></li>
-        <li><a href="about-me">Bookmark</a></li>
-        <li><a href="about-me">Profile</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="Bookmark">Bookmark</a></li>
+        <li><a href="Profile">Profile</a></li>
       </ul>
-    </div>
+    </nav>
   </body>
 </html>
