seperation of interests

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" type="image/png" href="resources/favicon-32x32.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body background="Taylor-Swift-Eras-Tour.jpg">
+  <body background="/resources/Taylor-Swift-Eras-Tour.jpg">
     <header>
       <img src="resources/artist_logo-600x123.png" alt="Artist logo" />
     </header>
@@ -84,9 +84,13 @@
 
     <nav class="navbar">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li>
+          <a href="#"><i class="fa fa-fw fa-home"></i>Home</a>
+        </li>
         <li><a href="Bookmark">Bookmark</a></li>
-        <li><a href="Profile">Profile</a></li>
+        <li>
+          <a href="Profile"><i class="fa fa-fw fa-user"></i>Profile</a>
+        </li>
       </ul>
     </nav>
   </body>
