adding bookmark and profile pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body background="/resources/Taylor-Swift-Eras-Tour.jpg">
+  <body>
     <header>
       <img src="resources/artist_logo-600x123.png" alt="Artist logo" />
     </header>
