--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
     <main class="quiz">
       <div class="card">
+        <img
+          class="bookmark"
+          src="resources/navbar-icon/bookmark.png"
+          alt="bookmark"
+        />
         <section class="question">
           <h5>QUESTION 1:</h5>
           <p>What is Taylor Swift's full name?</p>
@@ -25,6 +30,11 @@
       </div>
 
       <div class="card">
+        <img
+          class="bookmark"
+          src="resources/navbar-icon/bookmark.png"
+          alt="bookmark"
+        />
         <section class="question">
           <h5>QUESTION 2:</h5>
           <p>
@@ -39,6 +49,11 @@
       </div>
 
       <div class="card">
+        <img
+          class="bookmark"
+          src="resources/navbar-icon/bookmark.png"
+          alt="bookmark"
+        />
         <section class="question">
           <h5>QUESTION 3:</h5>
           <p>
@@ -53,6 +68,11 @@
       </div>
 
       <div class="card">
+        <img
+          class="bookmark"
+          src="resources/navbar-icon/bookmark.png"
+          alt="bookmark"
+        />
         <section class="question">
           <h5>QUESTION 4:</h5>
           <p>
@@ -67,6 +87,11 @@
       </div>
 
       <div class="card">
+        <img
+          class="bookmark"
+          src="resources/navbar-icon/bookmark.png"
+          alt="bookmark"
+        />
         <section class="question">
           <h5>QUESTION 5:</h5>
           <p>
@@ -87,9 +112,11 @@
         <li>
           <a href="#"><i class="fa fa-fw fa-home"></i>Home</a>
         </li>
-        <li><a href="Bookmark">Bookmark</a></li>
+        <li><a href="bookmark.html">Bookmark</a></li>
         <li>
-          <a href="Profile"><i class="fa fa-fw fa-user"></i>Profile</a>
+          <a href="pages/profile.html"
+            ><i class="fa fa-fw fa-user"></i>Profile</a
+          >
         </li>
       </ul>
     </nav>
