--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
           <button>Show Answer</button>
           <p class="show-answer">Taylor Alison Swift</p>
         </section>
+      <section class="tag">
+        <p class="answer-card-question">#albums</p>
+        <p class="answer-card-question">#biography</p>
+        <p class="answer-card-question">#record</p>
+      </section>
       </div>
 
       <div class="card">
@@ -45,6 +50,9 @@
         <section class="answer">
           <button>Show Answer</button>
           <p class="show-answer">2006</p>
+        </section>
+        <section class="tag">
+          <p class="answer-card-question">#albums</p>
         </section>
       </div>
 
@@ -65,6 +73,9 @@
           <button>Show Answer</button>
           <p class="show-answer">Fearless</p>
         </section>
+        <section class="tag">
+          <p class="answer-card-question">#albums</p>
+        </section>
       </div>
 
       <div class="card">
@@ -84,6 +95,11 @@
           <button>Show Answer</button>
           <p class="show-answer">Miss Americana</p>
         </section>
+      </section>
+      <section class="tag">
+        <p class="answer-card-question">#albums</p>
+        <p class="answer-card-question">#biography</p>
+      </section>
       </div>
 
       <div class="card">
@@ -104,6 +120,12 @@
           <button>Show Answer</button>
           <p class="show-answer">1989</p>
         </section>
+      </section>
+      <section class="tag">
+        <p class="answer-card-question">#album</p>
+        <p class="answer-card-question">#biography</p>
+        <p class="answer-card-question">#record</p>
+      </section>
       </div>
     </main>
 
