added profile page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="card">
         <img
           class="bookmark"
-          src="resources/navbar-icon/bookmark.png"
+          src="resources/bookmark-empty.svg"
           alt="bookmark"
         />
         <section class="question">
@@ -37,7 +37,7 @@
       <div class="card">
         <img
           class="bookmark"
-          src="resources/navbar-icon/bookmark.png"
+          src="resources/bookmark-empty.svg"
           alt="bookmark"
         />
         <section class="question">
@@ -59,7 +59,7 @@
       <div class="card">
         <img
           class="bookmark"
-          src="resources/navbar-icon/bookmark.png"
+          src="resources/bookmark-empty.svg"
           alt="bookmark"
         />
         <section class="question">
@@ -81,7 +81,7 @@
       <div class="card">
         <img
           class="bookmark"
-          src="resources/navbar-icon/bookmark.png"
+          src="resources/bookmark-empty.svg"
           alt="bookmark"
         />
         <section class="question">
@@ -105,7 +105,7 @@
       <div class="card">
         <img
           class="bookmark"
-          src="resources/navbar-icon/bookmark.png"
+          src="resources/bookmark-filled.svg"
           alt="bookmark"
         />
         <section class="question">
