--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="resources/favicon-32x32.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Emy's quiz app</title>
   </head>
   <body>
     <header>
@@ -136,7 +136,7 @@
         </li>
         <li><a href="bookmark.html">Bookmark</a></li>
         <li>
-          <a href="pages/profile.html"
+          <a href="profile.html"
             ><i class="fa fa-fw fa-user"></i>Profile</a
           >
         </li>
