--- a/profile.html
+++ b/profile.html
@@ -56,13 +56,11 @@
     <nav class="navbar">
       <ul>
         <li>
-          <a href="#"><i class="fa fa-fw fa-home"></i>Home</a>
+          <a href="index.html"><i class="fa fa-fw fa-home"></i>Home</a>
         </li>
         <li><a href="bookmark.html">Bookmark</a></li>
         <li>
-          <a href="pages/profile.html"
-            ><i class="fa fa-fw fa-user"></i>Profile</a
-          >
+          <a href="#"><i class="fa fa-fw fa-user"></i>Profile</a>
         </li>
       </ul>
     </nav>
