--- a/bookmark.html
+++ b/bookmark.html
@@ -43,7 +43,7 @@
     <nav class="navbar">
       <ul>
         <li>
-          <a href="#"><i class="fa fa-fw fa-home"></i>Home</a>
+          <a href="index.html"><i class="fa fa-fw fa-home"></i>Home</a>
         </li>
         <li><a href="bookmark.html">Bookmark</a></li>
         <li>
