--- a/bookmark.html
+++ b/bookmark.html
@@ -45,7 +45,7 @@
         <li>
           <a href="index.html"><i class="fa fa-fw fa-home"></i>Home</a>
         </li>
-        <li><a href="bookmark.html">Bookmark</a></li>
+        <li><a href="#">Bookmark</a></li>
         <li>
           <a href="profile.html"
             ><i class="fa fa-fw fa-user"></i>Profile</a
