updating my issues

--- a/profile.html
+++ b/profile.html
@@ -59,7 +59,7 @@
           <a href="index.html"><i class="fa fa-fw fa-home"></i>Home</a>
         </li>
         <li><a href="bookmark.html">Bookmark</a></li>
-        <li>
+        <li class="active">
           <a href="#"><i class="fa fa-fw fa-user"></i>Profile</a>
         </li>
       </ul>
