--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <nav class="navbar">
       <ul>
-        <li>
+        <li class="active">
           <a href="#"><i class="fa fa-fw fa-home"></i>Home</a>
         </li>
         <li><a href="bookmark.html">Bookmark</a></li>
