adding js files and fixing bugs

--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
 
         <section class="answer">
           <button>Show Answer</button>
-          <p class="show-answer">2006</p>
+          <p class="show-answer" data-js="card-answer">2006</p>
         </section>
         <section class="tag">
           <p class="answer-card-question">#albums</p>
@@ -71,7 +71,7 @@
         </section>
         <section class="answer">
           <button>Show Answer</button>
-          <p class="show-answer">Fearless</p>
+          <p class="show-answer" data-js="card-answer">Fearless</p>
         </section>
         <section class="tag">
           <p class="answer-card-question">#albums</p>
@@ -93,7 +93,7 @@
         </section>
         <section class="answer">
           <button>Show Answer</button>
-          <p class="show-answer">Miss Americana</p>
+          <p class="show-answer" data-js="card-answer">Miss Americana</p>
         </section>
       </section>
       <section class="tag">
@@ -116,9 +116,9 @@
           </p>
         </section>
 
-        <section class="answer">
+        <section class="answer" >
           <button>Show Answer</button>
-          <p class="show-answer">1989</p>
+          <p class="show-answer" data-js="card-answer">1989</p>
         </section>
       </section>
       <section class="tag">
