--- a/bookmark.html
+++ b/bookmark.html
@@ -43,7 +43,7 @@
     <nav class="navbar">
       <ul>
         <li>
-          <a href="index.html"><i class="fa fa-fw fa-home"></i>Home</a>
+          <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
         </li>
         <li class="active"><a href="#">Bookmark</a></li>
         <li>
