--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/png" href="resources/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emy's quiz app</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -56,7 +55,7 @@
     <nav class="navbar">
       <ul>
         <li>
-          <a href="index.html"><i class="fa fa-fw fa-home"></i>Home</a>
+          <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
         </li>
         <li><a href="bookmark.html">Bookmark</a></li>
         <li class="active">
